# fukuro-researcher

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  launch_scientist.py  main.py  pyproject.toml  run_controlled_experiment.py  run_inheritance.py  run_p2m_exp.py
archive/: Dockerfile  workflow.py
archive/modules/: paper_writing.py  utils.py  verification_execution.py
archive/outputs/: aider.txt  experiment.py
archive/outputs/latex/: references.bib  template.aux  template.blg
archive/src/: dataset_rename.py  results.csv
modules/: hypothesis_generation.py  paper_writing.py  research_metadata.json  sample.py  utils.py  verification_execution.py
outputs/: experiment_results.json
outputs/latex/: template.bbl  template.out
src/: algorithm.py  dataset_preparation.py  experiment.py  inheritance_experiment.py  mlworkflow.py  model_preparation.py  notebook.ipynb  p2m_experiment.py  tokenize_dataset_func_generator.py  utils.py
templates/: check.ipynb  dataset_preparation.py  debug_p2m_experiment.py  experiment.py  model_preparation.py  p2m_experiment.py  tokenize_dataset_func_generator.py
workspace/20241030/: abstract_experiment.py  aider.txt  algorithm.py  dataset_preparation.py  debug_p2m_experiment.py  inheritance_experiment.py  p2m.py  prompts.json  results.csv  test.py  testalgorithm.py  tokenize_dataset_func_generator.py
workspace/20241109/: aider.txt  dataset_name.json  dataset_preparation.py  experiment.py  mlworkflow.py  research_idea_generation_prompt.json  results.csv  utils.py
(+21 files in other folders)
