[project]
name = "fukuro-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aider-chat>=0.54.12",
    "anthropic>=0.34.1",
    "backoff>=2.2.1",
    "datasets>=2.21.0",
    "huggingface-hub>=0.24.6",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "numpy>=1.26.4",
    "ollama>=0.3.2",
    "openai>=1.42.0",
    "prompt2model>=0.0.8",
    "pymupdf4llm>=0.0.13",
    "pypdf>=4.3.1",
    "tiktoken>=0.7.0",
    "timm>=1.0.9",
    "torch>=2.4.0",
    "tqdm>=4.66.5",
    "transformers>=4.44.2",
    "vllm>=0.5.5",
    "wandb>=0.17.8",
]
